# Architecture

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  crates.js  help.html  index.html  rust-toolchain.toml  search-index.js  settings.html  src-files.js
.run/: Check.run.xml  Tests.run.xml  winit.run.xml
about/: README.md
benches/: font_parsing.rs  sends.rs
composable/: all.html  enum.Interval.html  index.html  sidebar-items.js  struct.Store.html  struct.Task.html  struct.TestStore.html  trait.Effects.html  trait.Reducer.html  trait.TestClock.html
composable/about/: index.html
composable/about/changelog/: index.html
composable/dependencies/: fn.with_dependencies.html  fn.with_dependency.html  index.html  sidebar-items.js  struct.Dependency.html  trait.DependencyDefault.html
composable/dependencies/values/: struct.Dependency.html  trait.DependencyDefault.html
composable/derive_macros/: derive.RecursiveReducer.html  index.html  sidebar-items.js  trait.RecursiveReducer.html
composable/effects/: enum.Interval.html  index.html  sidebar-items.js  struct.Scoped.html  trait.Effects.html  trait.Scheduler.html
composable/reducer/: trait.Reducer.html
composable/store/: struct.Store.html
composable/store/testing/: struct.TestStore.html
composable/views/: enum.Event.html  enum.Gesture.html  index.html  sidebar-items.js  struct.Circle.html  struct.ContinuousRoundedRectangle.html  struct.Ellipse.html  struct.Fixed.html  struct.FixedHeight.html  struct.FixedWidth.html  struct.Padding.html  struct.Rectangle.html  struct.RoundedRectangle.html  struct.Spacer.html  struct.Text.html  trait.Output.html  trait.Path.html  trait.View.html  type.Bounds.html  type.Offsets.html  type.Point.html  type.Size.html  type.Transform.html
composable/views/gesture/: enum.Response.html  fn.recognizer.html  index.html  sidebar-items.js  struct.Id.html  struct.Values.html  type.State.html
composable/views/gpu/: index.html  struct.Output.html
composable/views/output/: trait.Output.html
composable/views/shapes/: struct.Circle.html  struct.ContinuousRoundedRectangle.html  struct.Ellipse.html  struct.Rectangle.html  struct.RoundedRectangle.html  trait.Path.html
composable/views/svg/: index.html  struct.Output.html
composable/views/text/: enum.Direction.html  index.html  sidebar-items.js  struct.Font.html  struct.FontConfig.html  struct.Glyphs.html  struct.Language.html  struct.Script.html
composable/views/ui/: index.html  sidebar-items.js
examples/wgpu/: README.md  main.rs  menu.rs  wgpu.rs
examples/wgpu/winit/: menu.rs  mod.rs  wgpu.rs
examples/winit/: README.md  main.rs
examples/winit/frames/: header.rs  mod.rs
examples/winit/wgpu/: mod.rs  shader.spv  shader.wgsl
examples/winit/window/: menu.rs  menubar.rs  mod.rs
examples/winit/winit/: menu.rs  mod.rs  wgpu.rs
search.desc/composable/: composable-desc-0-.js
src/: effects.rs  lib.rs  reducer.rs
src/composable/: lib.rs.html
src/composable/about/: changelog.rs.html  mod.rs.html
src/composable/dependencies/: guard.rs.html  mod.rs.html  refs.rs.html  values.rs.html
src/composable/derive_macros/: mod.rs.html
src/composable/effects/: delay.rs.html  mod.rs.html  scheduler.rs.html  task.rs.html
src/composable/reducer/: mod.rs.html
src/composable/store/: channel.rs.html  mod.rs.html  runtime.rs.html
src/composable/views/: mod.rs.html
src/dependencies/: Cargo.toml  README.md  guard.rs  mod.rs  reducers.rs  refs.rs  values.rs
src/dependencies/src/: lib.rs  values.rs
src/dependency/: guard.rs  mod.rs  values.rs
src/derive_macros/: README.md  mod.rs
src/derive_macros/derive_reducers/: Cargo.toml
src/effects/: README.md  delay.rs  mod.rs  queue.rs  scheduler.rs  task.rs
src/reducer/: README.md  mod.rs
src/reducer/derive_reducers/: Cargo.toml
src/store/: README.md  channel.rs  mod.rs  runtime.rs  testing.rs
src/store/blocking/: mod.rs
src/store/testing/: README.md  clock.rs  mod.rs
src/views/: Cargo.toml  layout.rs  mod.rs
src/views/gesture/: mod.rs  recognizer.rs  tap.rs
src/views/layout/: mod.rs  spacing.rs
src/views/minimal/: mod.rs
src/views/minimal/font/: README.md  mod.rs
src/views/minimal/font/snapshots/: composable__views__minimal__font__body text.snap
src/views/minimal/font/typography/: Typographic scale.md  body.rs  mod.rs  scale.rs
src/views/modifiers/: fixed.rs  offset.rs  padding.rs
src/views/output/: gpu.rs  mod.rs  svg.rs
src/views/output/snapshots/: README.md  composable__views__output__circle.snap  composable__views__output__continuous.snap  composable__views__output__ellipse.snap  composable__views__output__rectangle.snap  composable__views__output__rounded.snap
src/views/shapes/: mod.rs  rounded.rs
src/views/src/: layout.rs  lib.rs
src/views/src/gesture/: mod.rs  recognizer.rs
src/views/src/output/: gpu.rs  mod.rs  svg.rs
src/views/src/output/snapshots/: composable_views__output__circle.snap  composable_views__output__continuous.snap  composable_views__output__ellipse.snap  composable_views__output__rectangle.snap  composable_views__output__rounded.snap
src/views/src/text/: mod.rs
src/views/src/ui/: mod.rs
src/views/src/ui/font/: mod.rs
src/views/src/ui/font/snapshots/: composable_views__ui__font__body text.snap
src/views/src/ui/font/typography/: Typographic scale.md  mod.rs  scale.rs
src/views/text/: font.rs  layout.rs  mod.rs
src/views/ui/: accessibility.rs  mod.rs  spacer.rs
src/views/ui/colors/: mod.rs  theme.rs
src/views/ui/font/: mod.rs
src/views/ui/font/typography/: mod.rs  scale.rs
trait.impl/composable/: trait.Effects.js
trait.impl/core/borrow/: trait.Borrow.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/convert/: trait.AsRef.js  trait.From.js  trait.TryFrom.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
type.impl/core/cell/: struct.Cell.js
(+145 files in other folders)
