[package]
name = "composable"
version = "0.6.0"
edition = "2021"

readme = "README.md"
license = "MIT OR Apache-2.0"
include = ["LICENSE-APACHE.md", "LICENSE-MIT.md"]


[features]
# Features (in development) that are not yet part of SemVer.
unreleased = []

# Unreleased: View drawing and events.
views = ["lyon", "svg", "rustybuzz", "ttf-parser"]
default_ui = ["views"]


[dependencies]
derive_reducers = { path = "src/derive_macros/derive_reducers" }
derive_more = { version = "0.99.17", features = ["from", "try_into"], default-features = false }
futures = { version = "0.3.30", features = ["executor"] }
futures-timer = "3.0.3"

# view feature dependencies
rustybuzz = { version = "0.15.0", optional = true }
lyon = { version = "1.0.1", optional = true, default-features = false }
usvg = { version = "0.42.0", optional = true, default-features = false }
svg = { version = "0.17.0", optional = true, default-features = false }

[dependencies.ttf-parser]
version = "*" # whatever version rustybuzz is using…
features = ["std"] # enable its `String` support
optional = true


[dev-dependencies]
ntest_timeout = "0.9.3"
divan = "0.1.14"
insta = "1.39.0"

winit = { version = "0.30.3", features = ["rwh_05"] }
meshopt = "0.3.0"
muda = "0.13.5"
wgpu = "0.20.1"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.52.0"

[target.'cfg(target_os = "macos")'.dependencies.cocoa]
version = "0.25.0"

[package.metadata.docs.rs] # when docs.rs builds the documentation…
rustdoc-args = ["--cfg", "docsrs"] # show feature flags
all-features = true


[profile.release]
codegen-units = 1
incremental = false
debug = false
strip = true
lto = "fat"

[profile.profiling]
inherits = "release"
debug = true
strip = false

[profile.dev.package."*"]
opt-level = 3


[workspace]

[[bench]]
name = "sends"
harness = false

[[bench]]
name = "font_parsing"
required-features = ["unreleased", "default_ui"]
harness = false


[[example]]
name = "winit"
required-features = ["unreleased", "default_ui"]
