[package]
name = "composable_views"
version = "0.0.0"
edition = "2021"

[lib]


[features]
default_ui = []


[dependencies]
dependencies = { workspace = true }
rustybuzz = { version = "0.12.1" }
lyon = { version = "1.0.1", default-features = false }
usvg = { version = "0.37.0", default-features = false }
svg = { version = "0.14.0", default-features = false }

[dependencies.ttf-parser]
version = "*" # whatever rustybuzz is using…
features = ["std"] # enable its `String` support


[dev-dependencies]
insta = "1.34.0"
